@@ -1,3 +1,8 @@
+2014-12-14  Jan HUbicka  <hubicka@ucw.cz>
+
+	PR lto/64043
+	* g++.dg/lto/pr64043_0.C: New testcase.
+
 2014-12-14  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR rtl-optimization/64037
